# studio-offline

./: Cargo.toml  readme.md
client/studio_offline/: Cargo.toml
client/studio_offline/src/: hooks.rs  lib.rs  patterns.rs  scanner.rs
client/webview_who/: Cargo.toml
client/webview_who/src/: lib.rs
server/: Cargo.toml
server/src/: app_state.rs  asset_types.rs  main.rs
server/src/routes/: assets.rs  client_settings.rs  mod.rs  oauth.rs  static_handlers.rs  telemetry.rs  universal_app_config.rs
static/auth/OAuth/: authorize.html  token.json  userinfo.json
static/config/ClientSettings/: PCStudioApp.json
static/config/GameTemplates/: content.json
static/config/StudioUserSettings/: BetaFeatureInformation.json
static/user/Users/: authenticated.json  mysettings.json
