[package]
name = "studio_offline_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
base64 = "0.22.1"
hex = "0.4.3"
inquire = "0.9.1"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["stream", "gzip", "deflate", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
